test/negative/parse_expected_expr.mut
# Negative: expected expression but got keyword
x: i64 = end
